Working on: Make post body in the same way readable as Safari's reader view (Issue #6)

--- a/assets/scss/framework/design/typography/text-style/text-style.scss
+++ b/assets/scss/framework/design/typography/text-style/text-style.scss
@@ -8,7 +8,7 @@
 
 
 // The width of a text block
-$text-block-width: $lem * 33;
+$text-block-width: $lem * 30;
 
 
 // The text mixin
